--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
   "name": "firewarden",
+  "version": "0.0.0",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite dev",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "vite": "^5.1.4"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.56.3",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0"
+  }
 }
