--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     ],
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "strict": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
@@ -13,7 +13,11 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "types": []
+    "types": [],
+    "baseUrl": "./",
+    "paths": {
+      "/*": ["src/*"]
+    }
   },
   "moduleDetection": "force"
 }
